Asset_Tracker/force-app/main/default/objects/Employees__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Employee ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>