Asset_Tracker/force-app/main/default/objects/Employees__c/fields/Personal_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Personal Email ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>