Asset_Tracker/force-app/main/default/objects/Employees__c/fields/Present_address_same_as_permanent__c.field-meta.xml
<CustomField>
    <fullName>Present_address_same_as_permanent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Present address same as permanent</label>
    <type>Checkbox</type>
</CustomField>