Asset_Tracker/force-app/main/default/objects/Employees__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>