Asset_Tracker/force-app/main/default/objects/Employees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Employee_ID__c</columns>
    <columns>Work_Email_ID__c</columns>
    <columns>Reporting_Manager__c</columns>
    <columns>Work_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>